--- a/Training_Data.ipynb
+++ b/Training_Data.ipynb
@@ -2,6 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# Bildpfad\n",
+    "image_path = \"7.jpg\"  # Ersetze dies durch den Pfad zu deinem Bild\n",
+    "\n",
+    "# Bild mit OpenCV lesen\n",
+    "image = cv2.imread(image_path)\n",
+    "\n",
+    "# Überprüfen, ob das Bild erfolgreich geladen wurde\n",
+    "if image is None:\n",
+    "    print(\"Fehler: Das Bild konnte nicht geladen werden. Überprüfe den Pfad!\")\n",
+    "else:\n",
+    "    # Bild anzeigen\n",
+    "    cv2.imshow(\"Angezeigtes Bild\", image)\n",
+    "\n",
+    "    # Warten, bis eine Taste gedrückt wird\n",
+    "    cv2.waitKey(0)\n",
+    "\n",
+    "    # Fenster schließen\n",
+    "    cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +43,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.5"
   }
  },
